--- a/hw9.ipynb
+++ b/hw9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "251765cc",
    "metadata": {
     "deletable": false,
@@ -156,7 +156,11 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "1. Because that does not account for the time dimension and ignores sensoring. A customer churn after 5 days and one after a few years both get the same \"churned\" lable. A customer who is still active till today still can churned in the future with a right-censored. Using suprevised learning does not handle the right-censored problem. Only survival analysis can use time till event and censoring to predict the outcome of each case.\n",
+    "\n",
+    "2. Churn often happen really early so someone join last week would be more likely to churned. While someone has already stayed for a year, they would more likely to stay more.\n",
+    "\n",
+    "3. A flat survival function means that, during that time range, the probability of a customer staying is not decreasing, so the chance of leaving is constant during that period."
    ]
   },
   {
@@ -451,9 +455,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cpsc330]",
+   "display_name": "venv (3.13.4)",
    "language": "python",
-   "name": "conda-env-cpsc330-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -465,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.4"
   },
   "otter": {
    "OK_FORMAT": true,
