--- a/hw9.ipynb
+++ b/hw9.ipynb
@@ -285,8 +285,59 @@
    },
    "source": [
     "<!-- END QUESTION -->\n",
+    "### Predicting Credit Card Defaults: What I Learned From Building a Model\n",
     "\n",
-    "<br><br>"
+    "#### Problem: who is going to default?\n",
+    "The goal of my project was to help a bank estimate which credit card clients are likely to default on their payment next month. This is a classic decision problem: if we can find high risk customers early, the bank could lower their credit limits, reach out proactively, or adjust its risk exposure.\n",
+    "\n",
+    "treated this as a binary classification problem, where the target has only two options, represented by default.payment.next.month (1 = default, 0 = no default).\n",
+    "\n",
+    "#### The dataset and basic exploration\n",
+    "I used “Default of Credit Card Clients” dataset. Each row is a client, and the columns describe things like:\n",
+    "\n",
+    "- Demographics: AGE, SEX, MARRIAGE, EDUCATION\n",
+    "- Credit limit: LIMIT_BAL\n",
+    "- Payment history: PAY_0 to PAY_6 (repayment status in the last 6 months)\n",
+    "- Bills and payments: BILL_AMT1–BILL_AMT6, PAY_AMT1–PAY_AMT6\n",
+    "- In total, there are 30,000 clients and 24 features, plus the target. As part of my initial exploratory data analysis (EDA), I looked at the distributions of the main numerical features.\n",
+    "\n",
+    "From this, a few things stood out:\n",
+    "- Many financial variables are heavily skewed (having more vaules on the left of the graph than the right).\n",
+    "- Some customers have very high credit limits and very large bills, which could dominate other smaler number.\n",
+    "- Payment status variables (PAY_*) have a few common values (like 0, -1, 1, 2), reflecting categories, not continuous counts.\n",
+    "\n",
+    "Some columns in the data have very big numbers and some have small numbers. To stop the big numbers from unfairly influencing the model, I used a tool called StandardScaler. It simply adjusts all the numbers so they are on a similar scale before training the model.\n",
+    "\n",
+    "#### Models I tried\n",
+    "I compared several supervised learning models, which means they learn from examples where we already know the correct answer. In our case, each example is a past customer with their information (age, credit limit, payment history, etc.) and a label saying whether they did or did not default. The model then looks for patterns that connect the inputs (customer info) to the output (default or not), so that it can make predictions for new customers it hasn’t seen before.\n",
+    "\n",
+    "A simple everyday example is email spam detection: the system is given many emails labeled as “spam” or “not spam,” learns the patterns, and then uses those patterns to decide whether a new email is spam. Here, instead of “spam vs not spam,” we’re predicting “default vs no default.”\n",
+    "\n",
+    "The models we will be using are\n",
+    "\n",
+    "- DummyClassifier\n",
+    "- Logistic Regression\n",
+    "- K-Nearest Neighbours\n",
+    "- Decision Tree\n",
+    "- Random Forest\n",
+    "\n",
+    "I split the data into two parts: 70% for training and 30% for testing.\n",
+    "\n",
+    "The training set is what the model learns from. It sees these customers and their outcomes (default or not) and tries to find patterns.\n",
+    "The test set is kept aside and not shown to the model during training. After the model is trained, I use this test set to see how well it works on new, unseen customers. This gives a more honest check of how the model might perform in the real world.\n",
+    "\n",
+    "For each model, I also used cross-validation on the training set. This means I repeatedly split the training data into several smaller train and test sets , train the model on part of the data, and check how well it does on the remaining part, then average the results. This helps get a more reliable estimate and reduces the chance that my results are just due to being “lucky” or “unlucky” when splitting of the data.\n",
+    "\n",
+    "#### Result\n",
+    "Cross validation accuracy is the curracy we got from doing cross-validation on the train data\n",
+    "\n",
+    "And, what we will be looking at is test accuracy. This measures how well the model performs on new, unseen data. In other words, how it is likely to preform in real life\n",
+    "\n",
+    "The Random Forest model achieved the best overall accuracy of 82.3%. With almost no overfitting.\n",
+    "\n",
+    "Overfitting happens when a model learns the training data too well, so it looks great on the training set but does poorly on new data. It’s like memorizing answers for a practice exam instead of actually understanding the material.\n",
+    "\n",
+    "In my case, the Random Forest’s performance on the training data and on the test data were very similar, which suggests it is not just memorizing and is likely to generalize better to new customers."
    ]
   },
   {
@@ -332,7 +383,9 @@
    "source": [
     "<!-- END QUESTION -->\n",
     "\n",
-    "<br><br>"
+    "Communication technique I used in my post: \n",
+    "- Explaining technical ideas in plain, everyday language. For example, exaplining training and test set, cross validation and overfitting. \n",
+    "- Using example or analogy for concept like supervise training model."
    ]
   },
   {
@@ -377,7 +430,7 @@
    "source": [
     "<!-- END QUESTION -->\n",
     "\n",
-    "<br><br><br><br>"
+    "https://medium.com/@climatecontext279/predicting-credit-card-defaults-what-i-learned-from-building-a-model-991d0a81a826?postPublishedType=initial\n"
    ]
   },
   {
@@ -425,9 +478,9 @@
     "editable": false
    },
    "source": [
-    "<!-- END QUESTION -->\n",
-    "\n",
-    "<br><br><br><br>"
+    "- How fine tuning and hyperparameters work. For example, before, I only knew that if we changed the number of neighbors, we can change the accuracy. But now I know there are built in functions that can do this for you. There’s no need for a for loop and manually typing in the model and each process on notebook. Instead, there’s a built in process to create a pipeline for preprocessing, fine tuning, cross validation, and evaluating the model, not just calling .fit() and .score().\n",
+    "- Time series also something new I learn in this course. I know how time works on some data but never really learn how to deal with them. On top of that, time series opening up about how data can realated to each other that I can still use to learn. For example, instead of time, we can take data from a mining facility and depth of the drills will be similar to time.\n",
+    "- Gridsearch and randomsearch also helps me with instead of kust manually choosing number from 1 to 100 maybe, we can create a range for it to search. Or if we are dealing with heavy models like RandomForest, we can do RandomSearch which preform almost the same while keeping the running time fast and can explore unqiue area we did not know.\n"
    ]
   },
   {
